# functional-way

./: .gitignore  .travis.yml  README.md
clojure-way/: CHANGELOG.md  project.clj
clojure-way/doc/: intro.md
clojure-way/src/clojure_way/: is_bst.clj  merge_sort.clj
clojure-way/test/clojure_way/: core_test.clj
haskell-way/: CHANGELOG.md  LICENSE  README.md  haskell-way.cabal
haskell-way/src/: DiceProblem.hs  GravitySort.hs  InsertionSort.hs  MergeSort.hs  QuickSort.hs  SelectionSort.hs  TransformBST.hs  gravitysort.hs  mergesort.hs
haskell-way/test/: Main.hs  Test.hs  TransformBST.hs
haskell-way/test/Test/: Util.hs
main/clojure/: MergeSort.clj  is_bst.clj  merge_sort.clj
main/scala/divideandconquer/: EncodingNumbers.scala  FormSentence.scala  MatrixShortestDistance.scala  MergeSort.scala  QuickSort.scala
main/scala/dynamicprogramming/: DiceProblem.scala
main/scala/heapsort/: Heap.scala  HeapSort.scala
scala-way/: build.sbt
scala-way/project/: plugins.sbt
scala-way/src/main/scala/divideandconquer/: EncodingNumbers.scala  FormSentence.scala  ListPermutations.scala  MatrixShortestDistance.scala  MergeSort.scala  QuickSort.scala  TowerOfHanoi.scala
scala-way/src/test/scala/: BuildBinaryTreeTest.scala  FormSentenceTest.scala  FractionalKnapsackTest.scala  GroupChildrenTest.scala  HeapSortProperties.scala  InvertBSTTest.scala  MergeMapsProperties.scala  MergeSortProperties.scala  MergeSortTest.scala  MinRefuelsTest.scala  QuickSortProperties.scala  ReverseListProperties.scala  TowerOfHanoiTest.scala  TransformBstProperties.scala
(+14 files in other folders)
