cabal-version:       2.4

name:                haskell-way
version:             0.1
synopsis:            Small programs (algorithms) in Haskell
homepage:            https://github.com/ashwinbhaskar/functional-way

library
  exposed-modules:
      GravitySort
    , InsertionSort
    , MergeSort
    , QuickSort
    , SelectionSort
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  other-modules:
    Test.Util
  build-depends:
      base ^>=4.12.0.0
    , haskell-way
  hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
